Don't report IO error on clean guest shutdown

Since commit 9cf9ca434, spice_channel_iterate() will report a
SPICE_CHANNEL_ERROR_IO error to library users when
SpiceChannel::has_error is set. In particular, when the server side
closes its SPICE sockets because the VM is being shut down, an IO error
will get reported. Prior to this change, a channel-closed event was
reported on graceful VM shutdowns as there was
a g_socket_condition_check() guarding the emission of the IO error
signal.

This commit readds the g_socket_condition_check() test, but only when
SpiceChannel::has_error is set.

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=83692